kube/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-front
spec:
  selector:
    app: mvi-analyst-f
  ports:
    - port: 3030
      targetPort: 30000
  type: LoadBalancer
