kube/movie_analyst_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvi-analyst-b
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mvi-analyst-b
  template:
    metadata:
      labels:
        app: mvi-analyst-b
    spec:
      containers:
        - name: app
          image: davidsmenesesc/rampup-back:v1
          ports:
            - containerPort: 3030    
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.32.0
          args:
            - "--structured-logs"
            - "--port=3306"
            - "moviedb"
            - "--credentials-file=/home/sanmeneses903/key.json"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
          - name: volume-db
            mountPath: /secrets/
            readOnly: false
          resources:
            requests:
              memory: "1Gi"
              cpu:    "1"
      volumes:
        - name: volume-db
          secret:
            secretName: secret-gcp
---
apiVersion: v1
kind: Service
metadata:
  name: mvi-analyst-b-service
spec:
  selector:
    app: mvi-analyst-b
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
