kube/movie_analyst_ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvi-analyst-f
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mvi-analyst-f
  template:
    metadata:
      labels:
        app: mvi-analyst-f
    spec:
      containers:
        - name: app
          image: davidsmenesesc/rampup-front:$BUILD_NUMBER
          ports:
            - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: mvi-analyst-f-service
spec:
  type: NodePort
  selector:
    app: mvi-analyst-f
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
      nodePort: 30001
      name: http
