kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mviapp.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: mvi-analyst-f-service
            port:
              number: 3030
